src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_IncludeAsRoot.xaml
<StaticResource ResourceKey="MyResource" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" />

